@@ -25,7 +25,7 @@ class ZipContent {
 
     Document getFile(String filename) {
         return getOptionalFile(filename)
-                .orElseThrow(() -> new IllegalArgumentException(String.format("File not found for %s", filename)));
+                .orElseThrow(() -> new IllegalArgumentException("File not found for %s".formatted(filename)));
     }
 
     Optional<Document> getOptionalFile(String filename) {
